--- a/doc/gpsquare.tex
+++ b/doc/gpsquare.tex
@@ -84,7 +84,7 @@
   \begin{split}
    & f_{N(\mu_{\phi_i}, 2 \Sigma_{\phi_i})}(y) f_{N(\mu_{\phi_j}, 2 \Sigma_{\phi_j})}(y) = 
     C(\phi_i,\phi_j) f_{N(\mu_{i,j}, \Sigma_{i,j})}(y) \\
-    & C(\phi_i,\phi_j) = \frac{1}{(4 \pi)^{n/2} |\Sigma_{\phi_i} + \Sigma_{\phi_j}|} 
+    & C(\phi_i,\phi_j) = \frac{1}{(4 \pi)^{n/2} |\Sigma_{\phi_i} + \Sigma_{\phi_j}|^{1/2}} 
 					         \exp \Big(-\frac{1}{4} (\mu_{\phi_i} - \mu_{\phi_j})^T (\Sigma_{\phi_i} + \Sigma_{\phi_j})^{-1} (\mu_{\phi_i} - \mu_{\phi_j})\Big) \\
 	& \mu_{i,j} = (\Sigma_{\phi_i}^{-1} + \Sigma_{\phi_j}^{-1})^{-1} (\Sigma_{\phi_i}^{-1} \mu_{\phi_j} +
 																		\Sigma_{\phi_j}^{-1} \mu_{\phi_i}) \\
